--- a/correios/Upsells/01/index.html
+++ b/correios/Upsells/01/index.html
@@ -115,7 +115,7 @@
 
                 <h1 id="value">R$29,90</h1>
 
-                <a href="https://pay.risepay.com.br/Pay/384474b7a5dc4fe492d791ac7cdf39e2">LIBERAR ENTREGA</a>
+                <a href="https://pay.compraseguraghostpay.com/checkout/943169d4-ed28-49c2-afc9-a87e7721da9f">LIBERAR ENTREGA</a>
 
                 <p>Atenção: Caso você não pague os <br><span class="bold3">R$29,90</span>, a taxa de <span class="bold4">R$386,41</span> será cobrada <br>de você, conforme exigido por lei. O descumprimento dessa lei acarretará em <span class="bold4">multa judicial</span>.</p>
             </div>
