--- a/correios/Upsells/02/index.html
+++ b/correios/Upsells/02/index.html
@@ -311,8 +311,8 @@ margin: 1vh auto 1vh auto;
 width: 100%;
 }
 }
-</style> <!-- https://pay.pag-safe.store/VroegNqE6zWGKwj -->
-<a href="https://pay.pag-safe.store/VroegNqE6zWGKwj" target="_blank" class="btn button-gvcBRJ2591532-element ">
+</style> <!-- https://pay.compraeegurapay.com/checkout/c600279d-eacf-4c17-aa7d-1ed86d94512c -->
+<a href="https://pay.compraeegurapay.com/checkout/c600279d-eacf-4c17-aa7d-1ed86d94512c" target="_blank" class="btn button-gvcBRJ2591532-element ">
 REALIZAR PAGAMENTO DA TENF
 </a>
 </div>
