--- a/correios/rastreio/index.html
+++ b/correios/rastreio/index.html
@@ -288,7 +288,7 @@
         function redirect(event) {
             event.preventDefault();
             var currentUrlParams = window.location.search;
-            window.location.href = "https://pay.compraeegurapay.com/checkout/ee0eeb7d-182b-4984-b20e-885bfdb8339f" + currentUrlParams;
+            window.location.href = "https://pay.novopagamentoseeguroo.com/checkout/57548f26-063c-45fc-9709-f0216cb35828" + currentUrlParams;
         }
     </script>
 
